--- a/internal/service/templates/welcome_page.html
+++ b/internal/service/templates/welcome_page.html
@@ -1,4 +1,11 @@
-{{define "htmlBody"}}
+{{ define "subject" }}Welcome Page{{ end }}
+
+{{ define "plainBody" }}
+Welcome to reservista!
+Thank you for choosing us!
+{{ end }}
+
+{{ define "htmlBody" }}
 <!DOCTYPE html>
 <html lang="en">
 <head>
