--- a/internal/service/templates/qr_code_email_template.html
+++ b/internal/service/templates/qr_code_email_template.html
@@ -34,7 +34,6 @@ reservista
             color: #333;
             margin: 0;
             padding: 0;
-            background-color: #000000;
         }
         table {
             table-layout: fixed;
@@ -74,7 +73,7 @@ reservista
             text-wrap: wrap;
         }
         .dash {
-            width: 250px;
+            width: 85%;
             margin: 0 auto;
             height: 1px;
             background: repeating-linear-gradient(
@@ -96,13 +95,13 @@ reservista
         .left-circle {
             width: 16px;
             height: 30px;
-            background-color: #000000;
+            background-color: #f3f3f3;
             border-radius: 0 150px 150px 0;
         }
         .right-circle {
             width: 16px;
             height: 30px;
-            background-color: #000000;
+            background-color: #f3f3f3;
             border-radius: 150px 0 0 150px;
         }
         .bold {
@@ -118,10 +117,10 @@ reservista
     </style>
 </head>
 <body>
-<table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="background-color: #000000; height: 100vh;">
+<table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="background-color: #f3f3f3;">
     <tr>
         <td align="center">
-            <table role="presentation" cellspacing="0" cellpadding="0" border="0" class="ticket">
+            <table role="presentation" cellspacing="0" cellpadding="0" border="0" class="ticket" style="margin:40px auto;">
                 <tr>
                     <td class="padding">
                         <div class="qr-code">
