--- a/internal/service/templates/verification_code.html
+++ b/internal/service/templates/verification_code.html
@@ -1,7 +1,7 @@
 {{ define "subject" }}Your Verification Code{{ end }}
 
 {{ define "plainBody" }}
-Your verification code is: {{ .Content }}
+Your verification code is: {{ .Code }}
 {{ end }}
 
 {{ define "htmlBody" }}
@@ -14,7 +14,6 @@ Your verification code is: {{ .Content }}
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
             color: #333;
             margin: 0;
             padding: 0;
@@ -61,10 +60,10 @@ Your verification code is: {{ .Content }}
     </style>
 </head>
 <body>
-    <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="background-color: #f9f9f9; height: 100vh; width: 100%;">
+    <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="background-color: #f3f3f3;">
         <tr>
             <td>
-                <table role="presentation" cellspacing="0" cellpadding="0" border="0" class="container">
+                <table role="presentation" cellspacing="0" cellpadding="0" border="0" class="container" style="border: 1px solid #e0e0e0; margin:40px auto">
                     <tr>
                         <td class="header">
                             Your Verification Code! Some text
@@ -77,7 +76,7 @@ Your verification code is: {{ .Content }}
                     </tr>
                     <tr>
                         <td>
-                            <div class="code">{{.Content}}</div>
+                            <div class="code">{{.Code}}</div>
                         </td>
                     </tr>
                     <tr>
