--- a/internal/service/templates/qr_code_email_template.html
+++ b/internal/service/templates/qr_code_email_template.html
@@ -106,6 +106,8 @@ reservista
         }
         .bold {
             font-weight: bold;
+            text-decoration: none;
+            color: #000000;
         }
         .hl {
             height: 1px;
@@ -159,7 +161,7 @@ reservista
                             </tr>
                             <tr>
                                 <td><span>Email</span></td>
-                                <td class="bold" align="right">{{ .User.Name }}</td>
+                                <td class="bold" align="right">{{ .User.Email }}</td>
                             </tr>
                         </table>
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
